--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -1,5 +1,11 @@
 /*estas ahi archivo?*/
-h1,h2,h3,h4,h5,h6{
+div{
+    height: 300px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
     margin: 0 auto;
     text-align: center;
-    width: 250px
+    width: 3000px;
+}
